; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_hugetlb.c_hstate_next_node_to_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_hugetlb.c_hstate_next_node_to_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hstate = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hstate*, i32*)* @hstate_next_node_to_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hstate_next_node_to_free(%struct.hstate* %0, i32* %1) #0 {
  %3 = alloca %struct.hstate*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.hstate* %0, %struct.hstate** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = icmp ne i32* %6, null
  %8 = xor i1 %7, true
  %9 = zext i1 %8 to i32
  %10 = call i32 @VM_BUG_ON(i32 %9)
  %11 = load %struct.hstate*, %struct.hstate** %3, align 8
  %12 = getelementptr inbounds %struct.hstate, %struct.hstate* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @get_valid_node_allowed(i32 %13, i32* %14)
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %5, align 4
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @next_node_allowed(i32 %16, i32* %17)
  %19 = load %struct.hstate*, %struct.hstate** %3, align 8
  %20 = getelementptr inbounds %struct.hstate, %struct.hstate* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  %21 = load i32, i32* %5, align 4
  ret i32 %21
}

declare dso_local i32 @VM_BUG_ON(i32) #1

declare dso_local i32 @get_valid_node_allowed(i32, i32*) #1

declare dso_local i32 @next_node_allowed(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
